tests/parsing/fail/jean-fait-une-grammaire-03.rs
use rust_sync::sync;

sync! {
    #![pass(0)]
    
    node oui() = ()
    where
        x : bool = 3 >= -y;
}

fn main() {}
