tests/parsing/fail/jean-fait-une-grammaire-03.stderr
error: expected one of: `if`, `merge`, parentheses, integer literal, floating point literal, boolean literal, identifier
 --> tests/parsing/fail/jean-fait-une-grammaire-03.rs:8:25
  |
8 |         x : bool = 3 >= -y;
  |                         ^
